completed fade in & out on first load + homepage + starting to add content to all

--- a/homepage.html
+++ b/homepage.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graphic Design</title>
+    <title>DD Home</title>
     <link rel="stylesheet" href="./css/styles.css">
     <script src="./js/main.js" defer></script>
 </head>
-<body>
+<body>  
     <div class="nav">
         <ul>
             <li>
@@ -19,11 +19,13 @@
             </li>
         </ul>
     </div>
-    <div class= "image-grid"> 
-        <img src= "img/lafc-concept_orig.jpg">
-        <img src= "img/ausar-thompson_orig.jpg">
-        <img src= "img/ja-morant.jpg">
-        <img src= "img/alfa-romeo-poster.jpg">
+
+    <div class="text-grid">
+        <a href="graphic-design.html">graphic design</a>
+        <a href="about.html">about</a>
+        <a href="programming.html">programming</a>
+        <a href="contact.html">contact</a>
     </div>
+    
 </body>
 </html>
