added bottom bar + hover scaling effect for anchor items

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -25,5 +25,12 @@
         <img src= "img/ja-morant.jpg">
         <img src= "img/alfa-romeo-poster.jpg">
     </div>
+    <div class="bottom-bar">
+        <a href="https://www.linkedin.com/in/dariodaddamio/">linkedin</a>
+        <a href="https://github.com/dariodaddamio">github</a>
+        <a href="https://www.instagram.com/dariogfx/">instagram</a>
+        <a href="https://x.com/dariodaddamio">x</a>
+        <a href="https://linktr.ee/dariodaddamio">linktree</a>
+    </div>
 </body>
 </html>
