--- a/homepage.html
+++ b/homepage.html
@@ -26,6 +26,12 @@
         <a href="programming.html">programming</a>
         <a href="contact.html">contact</a>
     </div>
-    
+    <div class="bottom-bar">
+        <a href="https://www.linkedin.com/in/dariodaddamio/">linkedin</a>
+        <a href="https://github.com/dariodaddamio">github</a>
+        <a href="https://www.instagram.com/dariogfx/">instagram</a>
+        <a href="https://x.com/dariodaddamio">x</a>
+        <a href="https://linktr.ee/dariodaddamio">linktree</a>
+    </div>
 </body>
 </html>
