added copyright below bot bar | todo: fix bottom bar on diff pages

--- a/homepage.html
+++ b/homepage.html
@@ -33,5 +33,15 @@
         <a href="https://x.com/dariodaddamio">x</a>
         <a href="https://linktr.ee/dariodaddamio">linktree</a>
     </div>
+    <div class="bottom-bar-copyright">
+        <p>&copy; <span id="current-year"></span>&nbsp;Dario D'Addamio. All rights resreved.</p>
+        <script>
+            const currentYear = new Date().getFullYear();
+            document.getElementById("current-year").textContent = currentYear;
+        </script>
+    </div>
+    
+    
+
 </body>
 </html>
